# HNSWCudaHPGDA24

./: .gitignore  CMakeLists.txt  README.md  benchmark_cuda.cu  benchmark_search.cpp  benchmark_search.cu  compile_command  euclidean_distance.cpp  euclidean_distance.cu  main.cpp  main_1.cu  main_allocation_test.cu  main_batch_test.cu  main_cu.cpp  main_cu.cu  main_cuda_test.cpp  main_cuda_test.cu  main_euclidean.cu  main_pinned_test.cu  main_search_layer.cu  main_stream_test.cu  main_vectors_test.cu  vector-diff.cu
include/: hnsw.hpp  utils.hpp
include_1/: cuda_kernels.cu  cuda_kernels.cuh  hnsw.cu  hnsw1.hpp  utils1.hpp
include_allocation/: hnsw_allocation.hpp
include_batch/: hnsw_batch.hpp
include_cuda/: hnsw_cuda.hpp  hnsw_cuda_copy.hpp  utils_cuda.hpp
include_pinned/: hnsw_pinned.hpp
include_stream/: hnsw_stream.hpp
include_vectors/: hnsw_vectors.hpp
notebooks/: Big_Dataset_HDPGA_Contest.ipynb  HDPGA_Contest.ipynb
tests/: search_layer_test.cu
tutorials/: AC_CUDA_C.ipynb  Streaming and Visual Profiling.ipynb  launch.json  task.json
